--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
+    "history": "^5.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0",
