--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^2.9.4",
     "history": "^5.0.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
@@ -25,6 +26,7 @@
     "react-scripts": "4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0",
     "web-vitals": "^0.2.4",
